--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
     <div class="page">
         <header class="header">
             <img class="header__logo" src="./images/logo.svg" alt="контур карты России">
-            <nav class="header__nav">
-                <a class="header__lang-link link-hover" href="#">Ru</a>
+            <div class="header__nav">
+                <a class="header__lang-link header__lang-link_selected   link-hover" href="#">Ru</a>
                 <a class="header__lang-link link-hover" href="#">En</a>
-            </nav>
+            </div>
         </header>
         <main class="main">
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-                <div class="lead__images">
-                    <img src="./images/women_in_train.jpg" alt="спящая в вагоне поезда девушка" class="lead__image">
-                </div>
+                <img src="./images/women_in_train.jpg" alt="спящая в вагоне поезда девушка" class="lead__image">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
             <section class="intro">
@@ -71,120 +69,126 @@
                 <div class="places__place">
                     <h2 class="places__title">Куршская коса</h2>
                     <div class="places__website">
-                        <p class="places__url-heading">URL</p>
+                        <h3 class="places__url-heading">url</h3>
                         <a href="http://park-kosa.ru" class="places__link link-hover">park-kosa.ru</a>
                     </div>
                     <img src="./images/places/places__img1.jpg" alt="берег Куршского залива" class="places__image">
-                   <div class="places__texts">
+                    <div class="places__texts">
                         <p class="places__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два
-                        водных горизонта — спокойного Куршского залива с одной
-                        стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю
-                        российского анклава.
-                    </p>
-                    <p class="places__text">
-                        На этом Калининградская область не заканчивается. Для
-                        путешественника и исследователя там же по соседству — самая
-                        западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских
-                        городов. Атмосфера здешних
-                        мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
-                    </p>
-                   </div>
+                            водных горизонта — спокойного Куршского залива с одной
+                            стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на
+                            краю
+                            российского анклава.
+                        </p>
+                        <p class="places__text">
+                            На этом Калининградская область не заканчивается. Для
+                            путешественника и исследователя там же по соседству — самая
+                            западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских
+                            городов. Атмосфера здешних
+                            мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
+                        </p>
+                    </div>
                 </div>
                 <div class="places__place">
                     <h2 class="places__title">Кольский</h2>
                     <div class="places__website">
-                        <p class="places__url-heading">URL</p>
+                        <h3 class="places__url-heading">url</h3>
                         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
                             class="places__link link-hover">National Geographic</a>
                     </div>
                     <img src="./images/places/places__img2.jpg" alt="зимнее предгорье полуострова"
                         class="places__image">
-                   <div class="places__texts">
-                    <p class="places__text">Почти весь полуостров находится за Полярным кругом. Саамская
-                        тундра, от которой на юг —
-                        тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
-                    </p>
-                    <p class="places__text">
-                        Возможно, вы смотрели Звягинцева и даже слышали историю
-                        арктического фестиваля в Териберке. Возможно, слово «Хибины» не
-                        осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались
-                        пронизывающей земную кору
-                        сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть
-                        северное сияние начинает
-                        сбываться с билетом
-                        в Мурманск.
-                    </p>
-                   </div>
+                    <div class="places__texts">
+                        <p class="places__text">Почти весь полуостров находится за Полярным кругом. Саамская
+                            тундра, от которой на юг —
+                            тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.
+                        </p>
+                        <p class="places__text">
+                            Возможно, вы смотрели Звягинцева и даже слышали историю
+                            арктического фестиваля в Териберке. Возможно, слово «Хибины» не
+                            осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не
+                            интересовались
+                            пронизывающей земную кору
+                            сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть
+                            северное сияние начинает
+                            сбываться с билетом
+                            в Мурманск.
+                        </p>
+                    </div>
                 </div>
                 <div class="places__place">
                     <h2 class="places__title">Алтай</h2>
                     <div class="places__website">
-                        <p class="places__url-heading">URL</p>
+                        <h3 class="places__url-heading">url</h3>
                         <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ
 " class="places__link link-hover">YouTube
                         </a>
                     </div>
                     <img src="./images/places/places__img3.jpg" alt="ноутбук на фоне леса" class="places__image">
-                  <div class="places__texts">
-                    <p class="places__text">Алтай — одно из красивейших мест в России.
-                        В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
-                        горные реки и озёра. А если
-                        вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
-                        воздухом.
-                    </p>
-                    <p class="places__text">
-                        Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, 
-                        а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.
-                    </p>
-                  </div>
+                    <div class="places__texts">
+                        <p class="places__text">Алтай — одно из красивейших мест в России.
+                            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
+                            горные реки и озёра. А если
+                            вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным
+                            воздухом.
+                        </p>
+                        <p class="places__text">
+                            Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё
+                            разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы,
+                            а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.
+                        </p>
+                    </div>
                 </div>
                 <div class="places__place">
                     <h2 class="places__title">Зимний Байкал</h2>
                     <div class="places__website">
-                        <p class="places__url-heading">URL</p>
+                        <h3 class="places__url-heading">url</h3>
                         <a href="https://vk.com/baikalmile"
                             class="places__link link-hover">https://vk.com/baikalmile</a>
                     </div>
                     <img src="./images/places/places__img4.jpg" alt="лёд на поверхности озера" class="places__image">
-                  <div class="places__texts">
-                    <p class="places__text">Всем известен Байкал как крупнейшее озеро
-                        в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших
-                        мест в России.
-                    </p>
-                    <p class="places__text">
-                        Конечно, это всё так. Но Байкал ещё идеальное место
-                        для соревнований по скийорингу. Это такой вид спорта, когда лыжник
-                        привязывает себя
-                        к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на
-                        фестивале «Байкальская
-                        миля» был поставлен мировой рекорд — 197.011 км/ч.
-                    </p>
-                  </div>
+                    <div class="places__texts">
+                        <p class="places__text">Всем известен Байкал как крупнейшее озеро
+                            в мире. Многие также знают, что это самый большой источник пресной воды и одно из
+                            красивейших
+                            мест в России.
+                        </p>
+                        <p class="places__text">
+                            Конечно, это всё так. Но Байкал ещё идеальное место
+                            для соревнований по скийорингу. Это такой вид спорта, когда лыжник
+                            привязывает себя
+                            к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019
+                            года на
+                            фестивале «Байкальская
+                            миля» был поставлен мировой рекорд — 197.011 км/ч.
+                        </p>
+                    </div>
                 </div>
                 <div class="places__place">
                     <h2 class="places__title">Карелия</h2>
                     <div class="places__website">
-                        <p class="places__url-heading">URL</p>
+                        <h3 class="places__url-heading">url</h3>
                         <a href="http://vodlozero.ru/" class="places__link link-hover">http://vodlozero.ru/</a>
                     </div>
                     <img src="./images/places/places__img5.jpg" alt="широкая река посередине леса"
                         class="places__image">
-                   <div class="places__texts">
-                    <p class="places__text">Сибирь заканчивается не на Урале, а в Карелии: образующая
-                        тайгу сибирская лиственница не растёт западнее Водлозера. Зато
-                        здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот
-                        никогда не знали
-                        топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу,
-                        видевшему солнце раньше, чем
-                        увидал его Иван Грозный.
-                        В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
-                        в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-                   </div>
+                    <div class="places__texts">
+                        <p class="places__text">Сибирь заканчивается не на Урале, а в Карелии: образующая
+                            тайгу сибирская лиственница не растёт западнее Водлозера. Зато
+                            здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых
+                            болот
+                            никогда не знали
+                            топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу,
+                            видевшему солнце раньше, чем
+                            увидал его Иван Грозный.
+                            В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
+                            в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+                    </div>
                 </div>
             </section>
             <section class="cover">
-                <a href="https://stampsy.com/na-elektrichkakh-do-baikala"  class="cover__link">
-                    <h2  class="cover__title">До Байкала «на
+                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+                    <h2 class="cover__title">До Байкала «на
                         собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала
                         на
